HTML/JS/CSS scaffolded. Rough outlines of javascript constructors and objects laid out

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<DOCTYPE html>
+<!DOCTYPE html>
   <head>
     <title>Railway Race</title>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      
+      <div id="race-length">  </div>
   </body>
 </html>
