--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
   <head>
-    <title>Railway Race</title>
+    <title>Race Across the Overland Route</title>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <div id="race-length">  </div>
+      <section class="intro">
+        <h1>A Race Across the Overland Route</h1>
+        <p>A vast overland route awaits you and a rival railway, as you set out to connect the Transcontinental Railroad. Each of you will begin construction on either end of the country and then race toward each other, converging somewhere in the barren expanse of the interior.</p>
+        <p>You have been given a deposit on your contract from the United States Government in order to supply your company, but you will also be rewarded for each mile of track your company is able to lay before you and your competitor meet.\
+        Be careful that you don't under-order, or even more, be careful that you don't over-order and have all those wasted supplies eat into your revenue, because whomever finishes with the most money wins.</p>
+      </section>
   </body>
 </html>
