Moved script tag to bottom of body

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
   <head>
     <title>Race Across the Overland Route</title>
-    <script type="text/javascript" src="script.js"></script>
+
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <section class="intro hidden">
+      <section id="intro" class="intro visible">
         <h1>A Race Across the Overland Route</h1>
         <p>A vast overland route awaits you and a rival railway, as you set out to connect the Transcontinental Railroad. Each of you will begin construction on either end of the country and then race toward each other, converging somewhere in the barren expanse of the interior.</p>
         <p>You have been given a deposit on your contract from the United States Government in order to supply your company, but you will also be rewarded for each mile of track your company is able to lay before you and your competitor meet.\
@@ -13,10 +13,10 @@
         <button class="confirm center">OK</button>
       </section>
 
-      <section class="visible">
+      <section id="order" class="visible">
         <h1>Supply Your Company</h1>
-        
-      </section>
 
+      </section>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
