Adding formsAdded beginning of ordering form along with basic SCSS via grunt.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
       <section id="order" class="visible">
         <h1>Supply Your Company</h1>
+        <p></p>
+        <div class="container">
+          <form action="post">
+            <input id="wood-input" name="wood" type="number" step="100" placeholder="Amount of wood">
+            <input id="steel-input" name="steel" type="number" step="3" placeholder="Order steel">
+            <input id="labor-input" name="labor" type="number" step="10" placeholder="How many men">
+            <input type="submit">
+          </form>
+        </div>
 
       </section>
     <script type="text/javascript" src="script.js"></script>
