--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>Race Across the Overland Route</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Noticia+Text:400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
       <section id="intro" class="intro visible">
@@ -26,6 +27,7 @@
         </div>
 
       </section>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
