--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p></p>
         <div class="container">
           <form action="post">
-            <input id="wood-input" name="wood" type="number" step="100" placeholder="Amount of wood">
-            <input id="steel-input" name="steel" type="number" step="3" placeholder="Order steel">
-            <input id="labor-input" name="labor" type="number" step="10" placeholder="How many men">
+            <input id="wood-input" name="wood" type="number" min="0" step="100" placeholder="Amount of Wood">
+            <input id="steel-input" name="steel" type="number" min="0" step="3" placeholder="Amount of Steel">
+            <input id="labor-input" name="labor" type="number" min="0" step="10" placeholder="Number of Men">
             <input type="submit">
           </form>
         </div>
