--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <input id="wood-input" name="wood" type="number" min="0" step="100" placeholder="Amount of Wood">
             <input id="steel-input" name="steel" type="number" min="0" step="3" placeholder="Amount of Steel">
             <input id="labor-input" name="labor" type="number" min="0" step="10" placeholder="Number of Men">
-            <input id="order-submit" type="submit">
+            <input id="order-submit" value="Make Order" type="submit">
           </form>
         </div>
       </section>
