--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>A vast overland route awaits you and a rival railway, as you set out to connect the Transcontinental Railroad. Each of you will begin construction on either end of the country and then race toward each other, converging somewhere in the barren expanse of the interior.</p>
         <p>You have been given a deposit on your contract from the United States Government in order to supply your company, but you will also be rewarded for each mile of track your company is able to lay before you and your competitor meet.\
         Be careful that you don't under-order, or even more, be careful that you don't over-order and have all those wasted supplies eat into your revenue, because whomever finishes with the most money wins.</p>
-        <button class="confirm center">OK</button>
+        <button id="confirm-section-one" class="confirm center">OK</button>
       </section>
 
       <section id="order" class="visible">
@@ -35,30 +35,30 @@
           </tr>
           <tr id="wood-data" class="row">
             <td class="name">Wood</td>
-            <td class="price">$50</td>
-            <td class="needed">40000</td>
-            <td class="total-price">$190000</td>
+            <td class="price"></td>
+            <td class="needed"></td>
+            <td class="total-price"></td>
           </tr>
           <tr id="steel-data" class="row">
             <td class="name">Steel</td>
-            <td class="price">$50</td>
-            <td class="needed">40000</td>
-            <td class="total-price">$190000</td>
+            <td class="price"></td>
+            <td class="needed"></td>
+            <td class="total-price"></td>
           </tr>
           <tr id="labor-data" class="row">
             <td class="name">Labor</td>
-            <td class="price">$50</td>
-            <td class="needed">40000</td>
-            <td class="total-price">$190000</td>
+            <td class="price"></td>
+            <td class="needed"></td>
+            <td class="total-price"></td>
           </tr>
           <tr></tr>
         </table>
         <div class="container">
-          <form id="order-form" action="post">
+          <form id="order-form">
             <input id="wood-input" name="wood" type="number" min="0" step="100" placeholder="Amount of Wood">
-            <input id="steel-input" name="steel" type="number" min="0" step="3" placeholder="Amount of Steel">
+            <input id="steel-input" name="steel" type="number" min="0" step="5" placeholder="Amount of Steel">
             <input id="labor-input" name="labor" type="number" min="0" step="10" placeholder="Number of Men">
-            <input id="order-submit" value="Make Order" type="submit">
+            <button id="order-submit">Make Order</button>
           </form>
         </div>
       </section>
