--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-      <section id="intro" class="intro visible">
+      <section id="intro">
         <h1>A Race Across the Overland Route</h1>
         <p>A vast overland route awaits you and a rival railway, as you set out to connect the Transcontinental Railroad. Each of you will begin construction on either end of the country and then race toward each other, converging somewhere in the barren expanse of the interior.</p>
         <p>You have been given a deposit on your contract from the United States Government in order to supply your company, but you will also be rewarded for each mile of track your company is able to lay before you and your competitor meet.\
         Be careful that you don't under-order, or even more, be careful that you don't over-order and have all those wasted supplies eat into your revenue, because whomever finishes with the most money wins.</p>
-        <button id="confirm-section-one" class="confirm center">OK</button>
+        <a href="#order" id="confirm-section-one" class="button center">OK</a>
       </section>
 
-      <section id="order" class="visible">
+      <section id="order">
         <h1>Supply Your Company</h1>
         <p>Both you and your rival have been given a contract deposit of <span id="deposit">$200000</span> that you must use
           to purchase supplies. Each mile of track requires...
@@ -58,12 +58,12 @@
             <input id="wood-input" name="wood" type="number" min="0" step="100" placeholder="Amount of Wood">
             <input id="steel-input" name="steel" type="number" min="0" step="5" placeholder="Amount of Steel">
             <input id="labor-input" name="labor" type="number" min="0" step="10" placeholder="Number of Men">
-            <button id="order-submit">Make Order</button>
+            <input id="order-submit" type="submit" value="Make Order">
           </form>
         </div>
       </section>
 
-      <section id="results" class="visible">
+      <section id="results">
         <h1>Check the Map</h1>
       </section>
 
